Zope Changes

  This file contains change information for the current Zope release.
  Change information for previous versions of Zope can be found in the
  file HISTORY.txt.

    Bugs Fixed

      - Fixed broken management form for TopicIndexes.
    
      - Fixed bug in z2.py where it would eat certain socket error exceptions
        at startup.
    
      - Collector #550: Exceptions in XML-RPC requests no longer envoke
        standard_error_message. Plain text error messages are instead added to
        the fault string. In debug mode, a full traceback is also included
        since access to the error log is not a given for XML-RPC developers.

      - Collector #512,541: Fixed broken WebDAV compatiblity
        with Cadaver 0.20.X due to a missing Lock-Token header.

      - Zope Page Templates set a 'content-type' header even if
        the result of their execution was not rendered to the browser.
        We now check to make sure a content-type header is not
        already set before allowing a page template to set its own.

      - The title_or_id attribute of browser id managers and
        session data managers is now accessible publically.
   
      - Collector #510: When Python scripts and other "Script" objects were
        acquired during URL traversal, the __before_publishing_traverse__ code
        did not properly stop traversal at the script and populate
        traverse_subpath with the remaining url path elements.

      - Collector #238: Version Save and Discard buttons were too
        close to each other in Version management screens.

      - The "Add Browser ID Manager" permission was renamed to
        "Add Browser Id Manager".

      - Collector #437: dtml-sqltest now renders 'v not in (b,c)'
        when used as <dtml-sqltest v type=... multiple op=ne>.  
        Previously, a sqltest for inequality would render 'v <> b'
        when a single value was submitted, but would render