@@ -12,7 +12,7 @@
 ##############################################################################
 
 """Property management"""
-__version__='$Revision: 1.46 $'[11:-2]
+__version__='$Revision: 1.47 $'[11:-2]
 
 import ExtensionClass, Globals
 import ZDOM
@@ -259,7 +259,7 @@ class PropertyManager(ExtensionClass.Base, ZDOM.ElementWithAttributes):
         for prop in self._propertyMap():
             name=prop['id']
             if 'w' in prop.get('mode', 'wd'):
-                value=REQUEST.get(name, '')
+                value=REQUEST.get(name, type_converters[prop['type']](''))
                 self._updateProperty(name, value)
         if REQUEST:
             message="Saved changes."
